src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/callingFunction.sol
contract test {
  function f() {
    function() returns(function() returns(function() returns(function() returns(uint)))) x;
    uint y;
    y = x()()()();
  }
}