src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/invalidFixedConversionLeadingZeroesCheck.sol
contract test {
  function f() {
    fixed a = 1.0x2;
  }
}